--- a/views/pages/searches/new.ejs
+++ b/views/pages/searches/new.ejs
@@ -4,19 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Google Book Search</title>
-  <ul>
-    <% data.forEach(value => {%>
-    <h2></h2>
-    <li><%= value.name %></li>
-    <li><%= value.qty %></li>
-  })
-  </ul>
-<input type="radio" id="title" name="book" value="title">
-<label for="title">Title</label><br>
-<input type="radio" id="author" name="book" value="author">
-<label for="author">Author</label><br>
-</head>
-<body>
-  
+ <body>
+  <form action="/searches/new" method="POST">
+      <div class="form-example">
+        <label for="title">Title </label>
+        <input type="radio" name="name" id="name" required>
+      </div>
+      <div class="form-example">
+        <label for="radio">Author</label>
+        <input type="author" name="name" id="email" required>
+      </div>
+      <div class="form-example">
+        <input type="submit" value="Subscribe!">
+      </div>
+  </form>
 </body>
 </html>
