--- a/views/pages/searches/show.ejs
+++ b/views/pages/searches/show.ejs
@@ -7,27 +7,24 @@
   <ul>
     <% data.forEach(value => {%>
     <h2></h2>
-    <li><%= value.name %></li>
-    <li><%= value.qty %></li>
-  })
+    <li><%= value.title %></li>
+    <li><%= value.authors%></li>
+  <% }) %>
   </ul>
 </head>
-<form action="/new.ejs" method="POST">
-  <form action="server.js" method="POST" class="form-example">
-    <div class="form-example">
-      <label for="title">Title </label>
-      <input type="radio" name="name" id="name" required>
-    </div>
-    <div class="form-example">
-      <label for="radio">Author</label>
-      <input type="author" name="email" id="email" required>
-    </div>
-    <div class="form-example">
-      <input type="submit" value="Subscribe!">
-    </div>
-  </form>
-</form>
 <body>
-  
+  <form action="/new.ejs" method="POST">
+      <div class="form-example">
+        <label for="title">Title </label>
+        <input type="radio" name="name" id="name" required>
+      </div>
+      <div class="form-example">
+        <label for="radio">Author</label>
+        <input type="author" name="email" id="email" required>
+      </div>
+      <div class="form-example">
+        <input type="submit" value="Subscribe!">
+      </div>
+  </form>
 </body>
 </html>
