--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -16,3 +16,26 @@ h2 {
 #wrapper {
   margin: 0 auto;
 }
+
+.inputs {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+fieldset > ul > li {
+  width: 80%;
+  padding: 12px 20px;
+  margin: 20px 30px;
+  box-sizing: border-box;
+
+}
+
+label {
+  padding: 10px;
+}
+
+div {
+  width: 80%;
+}
+
