--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -39,3 +39,10 @@ div {
   width: 80%;
 }
 
+input[type='submit'] {
+  width: 120px;
+  margin: 0 auto;
+  height: 40px;
+  border: none;
+  border-radius: 12 px;
+}
