--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -85,3 +85,11 @@ input[type='submit'] {
   margin-top: 30px;
 }
 
+body{
+  background-color: salmon;
+  padding: 10px;
+  font-family: 'FranklinGothic Medium', 'Arial Narrow', Arial, sans-serif;
+  text-align: center;
+  margin: auto;
+  width: 500px;
+}
