--- a/public/styles/modules.css
+++ b/public/styles/modules.css
@@ -15,3 +15,12 @@ main{
   align-items: center;
 }
 
+@media only screen and (min-width: 768px){
+  body{
+    background-color: purple;
+  }
+}
+
+#edit{
+  display: none;
+}
