--- a/public/styles/modules.css
+++ b/public/styles/modules.css
@@ -24,3 +24,11 @@ main{
 #edit{
   display: none;
 }
+
+li{
+  border: 1px solid black;
+  justify-content: center;
+  align-content: center;
+  padding: 10px;
+}
+
