css added to base layout modules and reset

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -86,7 +86,7 @@ input[type='submit'] {
 }
 
 body{
-  background-color: salmon;
+  background-color: lightslategrey;
   padding: 10px;
   font-family: 'FranklinGothic Medium', 'Arial Narrow', Arial, sans-serif;
   text-align: center;
