--- a/views/pages/searches/new.ejs
+++ b/views/pages/searches/new.ejs
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="/styles/style.css" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Google Book Search</title>
  <body>
-  <form action="/searches/new" method="POST">
+   <h1>Search by  title or author</h1>
+  <form action="/searches" method="POST">
       <div class="form-example">
-        <label for="title">Title </label>
-        <input type="radio" name="name" id="name" required>
+        <label for="title">Title</label>
+        <input type="radio" name="name" value="title" id="name" required>
       </div>
       <div class="form-example">
         <label for="radio">Author</label>
-        <input type="author" name="name" id="email" required>
+        <input type="radio" name="name" value="author" id="email" required>
+      </div>
+      <div>
+        <input type="text" name="name" placeholder="Search..">
       </div>
       <div class="form-example">
         <input type="submit" value="Subscribe!">
