--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,9 +1,4 @@
-/* @import 'reset.css';
+@import 'reset.css';
 @import 'base.css';
 @import 'layout.css';
-@import 'module.css'; */
-
-
-body {color:green;}
-
-h2 {color:yellow;}
+@import 'module.css';
