--- a/views/pages/searches/show.ejs
+++ b/views/pages/searches/show.ejs
@@ -4,17 +4,21 @@
   <link rel="stylesheet" href="/styles/style.css" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Google Book Search </title>
-  <ul>
-    <% data.forEach(value => {%>
-    <h2></h2>
-    <li><%= value.title %></li>
-    <li><%= value.authors%></li>
-  <% }) %>
-  </ul>
 </head>
 <body>
-  <form action="/new.ejs" method="POST">
+  <title>Google Book Search </title>
+  <div>
+    <% data.forEach(value => {%>
+  <article>
+    <img src="<%= value.imageLinks%>" alt="<%value.title%>">
+    <h1><%= value.title %></h1>
+    <h2><%= value.authors %></h2>
+    <p><%= value.description %></p>
+  </article>
+  <% }) %>
+</div>
+
+  <!-- <form action="/new.ejs" method="POST">
       <div class="form-example">
         <label for="title">Title </label>
         <input type="radio" name="name" id="name" required>
@@ -25,7 +29,7 @@
       </div>
       <div class="form-example">
         <input type="submit" value="Subscribe!">
-      </div>
+      </div> -->
   </form>
 </body>
 </html>
