--- a/views/pages/searches/new.ejs
+++ b/views/pages/searches/new.ejs
@@ -20,7 +20,7 @@
         <input type="text" name="name" placeholder="Search..">
       </div>
       <div class="form-example">
-        <input type="submit" value="Subscribe!">
+        <input type="submit" value="Search">
       </div>
   </form>
 </body>
