--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,15 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/styles/style.css" />
-  <title>Document</title>
-</head>
-<body>
-<h1>Hello World!</h1>
-
-<h2>This is fun!</h2>
-  
-</body>
-</html>
+  <head>
+    <title>Book Collection</title>
+    <%- include('../layout/head.ejs') %>
+  </head>
+  <body>
+    <main>
