added body main and h2 tage and populated h2 with total number of books in the data base

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -6,3 +6,7 @@
   </head>
   <body>
     <main>
+      <body>
+        <main>
+          <h2>Total books in Database: <%= renderedCOntent.length %></h2>
+          
