--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -30,4 +30,10 @@
 
         </ul>
 
-        
+      </main>
+      <footer>
+        <%- include('../layout/footer.ejs') %>
+      </footer>
+    </body>
+
+</html>
