--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,39 +1,25 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
-  <title>Book Collection</title>
-  <%- include('../layout/head.ejs') %>
+    <%- include('../layout/head') %>
 </head>
 
 <body>
-  <main>
-
-    <body>
-      <main>
-        <h2>Total books in Database: <%= renderedCOntent.length %>
-        </h2>
-        <ul>
-          <% renderedContent.forEach(book=> { %>
-            <li>img src="<%= book.image_url %>" alt="<%= book.title %>">
-                  <p id="title">
-                    <%= book.title %>
-                  </p>
-                  <p id="title">
-                    <%= book.author %>
-                  </p>
-                  <p>
-                    <%= book.description %>
-                  </p>
-                  <button><a href="/books/<%= book.id %>">View Details</a></button></li>
+    <header>
+        <%- include('../layout/header') %>
+    </header>
+    <main>
+        <h1><span id="badge"><%= saved.length %> </span>Saved Books</h1>
+        <a href="/searches/new"><button>Search</button></a>
+        <div class="book" id="index">
+            <% saved.forEach(book => { %>
+            <%- include('../books/detail', {book: book}) %>
             <% }) %>
-
-        </ul>
-
-      </main>
-      <footer>
-        <%- include('../layout/footer.ejs') %>
-      </footer>
-    </body>
+        </div>
+    </main>
+    <footer></footer>
+</body>
 
 </html>
