--- a/views/pages/books/detail.ejs
+++ b/views/pages/books/detail.ejs
@@ -7,3 +7,9 @@
   <%- include('../../layout/head.ejs') %>
 </head>
 
+<body>
+  <h1><%= value.title %></h1>
+  <p><%= value.author %></p>
+  <p><%= value.description %></p>
+  <img src="<% valuse.image_url %>" alt="<%= value.title %>">
+  
