--- a/views/pages/books/detail.ejs
+++ b/views/pages/books/detail.ejs
@@ -12,4 +12,16 @@
   <p><%= value.author %></p>
   <p><%= value.description %></p>
   <img src="<% valuse.image_url %>" alt="<%= value.title %>">
-  
+  <%- include('edit.ejs') %>
+  <form action="/update/<%= value.id %>?_method = " delete" method="post">
+    <input type="hidden" name="id" value="<= value.id %>" />
+    <button type="submit">Delete Book</button>
+   </form>
+
+</body>
+<footer>
+  <script src="../../js/app.js"></script>
+  <%- include('../../layout.footer.ejs') %>
+</footer>
+
+</html>
