post route in form

--- a/views/books/detail.ejs
+++ b/views/books/detail.ejs
@@ -12,3 +12,5 @@
   <p><%= value.author %></p>
   <p><%= value.description %></p>
   <img src="<% valuse.image_url %>" alt="<%= value.title %>">
+  <%- include('edit.ejs') %>
+  <form action="/update/<%= value.id %>?_method = " delete" method="post">
