syntax error fixed form is routed

--- a/views/books/detail.ejs
+++ b/views/books/detail.ejs
@@ -17,4 +17,7 @@
     <input type="hidden" name="id" value="<= value.id %>" />
     <button type="submit">Delete Book</button>
    </form>
-   
+  </body>
+  <footer>
+    <script src="../../js/app.js"></script>
+  <%- include('../../layout.footer.ejs') %>
