--- a/views/books/detail.ejs
+++ b/views/books/detail.ejs
@@ -8,16 +8,25 @@
 </head>
 
 <body>
-  <h1><%= value.title %></h1>
-  <p><%= value.author %></p>
-  <p><%= value.description %></p>
+  <h1>
+    <%= value.title %>
+  </h1>
+  <p>
+    <%= value.author %>
+  </p>
+  <p>
+    <%= value.description %>
+  </p>
   <img src="<% valuse.image_url %>" alt="<%= value.title %>">
   <%- include('edit.ejs') %>
-  <form action="/update/<%= value.id %>?_method = " delete" method="post">
-    <input type="hidden" name="id" value="<= value.id %>" />
-    <button type="submit">Delete Book</button>
-   </form>
-  </body>
-  <footer>
-    <script src="../../js/app.js"></script>
+    <form action="/update/<%= value.id %>?_method = " delete" method="post">
+      <input type="hidden" name="id" value="<= value.id %>" />
+      <button type="submit">Delete Book</button>
+    </form>
+</body>
+<footer>
+  <script src="../../js/app.js"></script>
   <%- include('../../layout.footer.ejs') %>
+</footer>
+
+</html>
