edit form action

--- a/views/books/edit.ejs
+++ b/views/books/edit.ejs
@@ -1,2 +1,3 @@
   
 <button type="submit" id="callForm">Update Book Details</button>
+<form id="edit" action="/update/<%= value.id %>?_method=PUT" method="post"></form>
