--- a/views/books/edit.ejs
+++ b/views/books/edit.ejs
@@ -1,3 +1,4 @@
   
 <button type="submit" id="callForm">Update Book Details</button>
 <form id="edit" action="/update/<%= value.id %>?_method=PUT" method="post"></form>
+<input type="text" name="title" value="<%= value.title %>" placeholder=" title"/>
