input for description

--- a/views/books/edit.ejs
+++ b/views/books/edit.ejs
@@ -2,3 +2,4 @@
 <button type="submit" id="callForm">Update Book Details</button>
 <form id="edit" action="/update/<%= value.id %>?_method=PUT" method="post"></form>
 <input type="text" name="title" value="<%= value.title %>" placeholder=" title"/>
+<input type="text" name="description" value="<%= value.description %>" placeholder=" description"/>
