isbn input feature

--- a/views/books/edit.ejs
+++ b/views/books/edit.ejs
@@ -3,3 +3,4 @@
 <form id="edit" action="/update/<%= value.id %>?_method=PUT" method="post"></form>
 <input type="text" name="title" value="<%= value.title %>" placeholder=" title"/>
 <input type="text" name="description" value="<%= value.description %>" placeholder=" description"/>
+<input type="text" name="isbn" value="<%= value.isbn %>" placeholder=" isbn"/>
