input for image

--- a/views/books/edit.ejs
+++ b/views/books/edit.ejs
@@ -4,3 +4,4 @@
 <input type="text" name="title" value="<%= value.title %>" placeholder=" title"/>
 <input type="text" name="description" value="<%= value.description %>" placeholder=" description"/>
 <input type="text" name="isbn" value="<%= value.isbn %>" placeholder=" isbn"/>
+<input type="text" name="image" value="<%= value.image %>" placeholder=" Image URL"/>
