--- a/views/books/edit.ejs
+++ b/views/books/edit.ejs
@@ -5,3 +5,4 @@
 <input type="text" name="description" value="<%= value.description %>" placeholder=" description"/>
 <input type="text" name="isbn" value="<%= value.isbn %>" placeholder=" isbn"/>
 <input type="text" name="image" value="<%= value.image %>" placeholder=" Image URL"/>
+<input type="text" name="author" value="<%= value.author %>" placeholder=" Author"/>
