--- a/views/books/edit.ejs
+++ b/views/books/edit.ejs
@@ -6,3 +6,6 @@
 <input type="text" name="isbn" value="<%= value.isbn %>" placeholder=" isbn"/>
 <input type="text" name="image" value="<%= value.image %>" placeholder=" Image URL"/>
 <input type="text" name="author" value="<%= value.author %>" placeholder=" Author"/>
+<button type="submit">Update Book Details</button>
+
+</form>
